<resources>
    <string name="app_name">Turnero</string>

    <string name="txt_bienvenida">Bienvenido!</string>

    <string name="edit_nombre">Nombre completo</string>
    <string name="edit_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesion</string>

    <string name="txt_registro">¿No tienes una cuenta aún? ¡Registrate!</string>
    <string name="btn_registro">Registrarse</string>

    <string name="toolbar_titulo_registrarse">Crear cuenta</string>

    <string name="action_settings">Settings</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellido">Apellido</string>
    <string name="registro_dni">Numero de Documento</string>
    <string name="btn_crearCuenta">Crear Cuenta</string>
    <string name="username">Usuario</string>
    <string name="btn_sacarTurno">Sacar nuevo turno</string>
    <string name="btn_verTurno">Ver mis turnos</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="txt_fechaElegida">Fecha de Turno:</string>
    <string name="txt_especialidadElegida">Especialidad del Turno:</string>
    <string name="txt_nombre_confirmar">Nombre:</string>
    <string name="txt_apellido_confirmar">Apellido:</string>
    <string name="btn_confirmarTurno">Confirmar Turno</string>
    <string name="mensajeTurnoGuardado">El turno se guardo correctamente</string>
</resources>
