<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<include layout="@layout/toolbar"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.turnero_hospital.Formulario"
    android:padding="@dimen/padding_login"
    android:orientation="vertical"
    android:layout_marginTop="20dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittext_registro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registro_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_nombre" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittext_registro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registro_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_apellido" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittext_registro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registro_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_dni" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittext_registro">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registro_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_crearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedButton"
        android:text="@string/btn_crearCuenta"/>

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>