<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


            <LinearLayout
                android:id="@+id/toolbar_homeusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="200dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center|top"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center">
            <TextView
                android:id="@+id/usernameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/usernameProfileSize" />
            </LinearLayout>


    </android.support.design.widget.AppBarLayout>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/userImage"
        android:layout_height="@dimen/userImage"
        android:src="@drawable/genericuser"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        />

    <Button
        android:id="@+id/btn_sacarTurno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/btn_sacarTurno"
        android:layout_marginLeft="@dimen/padding_login"
        android:layout_marginRight="@dimen/padding_login"
        android:theme="@style/RaisedButton"/>
    <Button
        android:id="@+id/btn_verTurnos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/btn_verTurno"
        android:layout_marginLeft="@dimen/padding_login"
        android:layout_marginRight="@dimen/padding_login"
        android:theme="@style/RaisedButton"/>
</android.support.design.widget.CoordinatorLayout>